--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -1,21 +1,3 @@
-/* Set's border, padding and margin to 0 for all values */
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-}
-
-body, html {
-  color: #373C40;
-  font-family: Verdana, Arial, Helvetica, sans-serif;
-  height: 100%;
-  background-color: #f0f0f0;
-  margin: 10px;
-}
-
-body {
-  font-size: 70%;
-}
 
 p {
   padding: 7px 0;
@@ -73,7 +55,7 @@ input[type="number"],
 input[type="email"],
 input[type="date"],
 select {
-  width: calc(100% - 22px);
+  width: 100%;
   padding: 8px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
@@ -106,3 +88,4 @@ hr {
 .Create:hover {
   color: #abda0f;
 }
+
