--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%- include('links') %>
   <link rel="stylesheet" href="/styles/about.css" />
-  <title>Document</title>
+  <title>About us</title>
 </head>
 <body>
   <%- include('navbar') %>
-  <div class="container">
+  <div class="containers">
     <h1>About Haansh</h1>
     <p>Welcome to Haansh, your go-to platform for finding and posting jobs. We believe in connecting talented individuals with the right opportunities and helping businesses grow through our platform.</p>
     <p>At Haansh, we are constantly expanding our team. We are looking for passionate individuals who are eager to make a difference. If you're ready to join a dynamic and innovative team, we want to hear from you!</p>
