--- a/views/work.ejs
+++ b/views/work.ejs
@@ -3,28 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/work.css" />
     <%- include('links') %>
-    <title>Document</title>
+    <link rel="stylesheet" href="/styles/work.css" />
+    <title>I'm For Working</title>
   </head>
   <body>
-    <%- include('navbar') %>
-    <h1>Job Listings</h1>
-    <div class="container">
-      <% jobDetails.forEach(job => { %>
-      <div class="job">
+    <%- include('navbar') %> <% jobDetails.forEach(job => { %>
+    <div class="job containers">
+      <div class="jobMain">
         <h2><%= job.jobName %></h2>
-        <p><%= job.details %></p>
-        <p>Mobile: <%= job.mobile %></p>
-        <p>Email: <%= job.email %></p>
-        <p>Salary: $<%= job.salary %></p>
-        <% if (apply.some(myJob => myJob.jobId === job.jobId)) { %>
-          <button>Applied</button>
-        <% } else { %>
-          <button><a href="/work/<%= job.jobId %>">Apply</a></button>
-        <% } %>
+        <h3><span><%= job.compName %></span></h3>
+      </div>
+      <p><%= job.details %></p>
+      <p>Mobile: <%= job.mobile %></p>
+      <p>Email: <%= job.email %></p>
+      <p>Salary: $<%= job.salary %></p>
+      <% if (apply.some(myJob => myJob.jobId === job.jobId)) { %> <%
+      apply.filter(myJob => myJob.jobId === job.jobId).forEach(myJob => { %> <%
+      if(myJob.status === "Hired"){%>
+      <a class="btn btn-success button"><%= myJob.status %></a>
+      <% }if(myJob.status === "Rejected"){%>
+      <a class="btn btn-danger button"><%= myJob.status %></a>
+      <% }if(myJob.status === "pending"){%>
+      <a class="btn btn-warning button"><%= myJob.status %></a>
 
-      <% }) %>
+      <% } %> <% }); %> <% } else { %>
+      <a href="/work/<%= job.jobId %>" class="btn btn-primary button">Apply</a>
+      <% } %>
     </div>
+    <% }) %>
   </body>
 </html>
