--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,9 +1,9 @@
 .box {
   display: flex;
   width: 100%;
-  padding: 100px;
+  padding: 20px 50px ;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
 }
 
 h1 {
@@ -13,4 +13,10 @@ h1 {
 
 p {
   font-size: 30px;
+}
+
+p span a{
+  color: blue;
+  font-weight: 600;
+  text-decoration: none;
 }
