--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,22 +1,31 @@
-body {
+.cont {
   font-family: Arial, sans-serif;
-  /* background-color: #000000; */
   margin: 0;
   padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-
+  min-height: 90vh;
+}
+.background{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('../img/login.jpg') no-repeat center center fixed;
+  background-size: cover;
+  z-index: -1; /* Put it behind other elements */
 }
 
+
+
 .login-container {
-  background-color: #fff;
+  background: rgba(0, 0, 0, 0.1);
   padding: 20px;
-  padding-right: 50px;
+  margin-top: 20px;
   border-radius: 5px;
-  box-shadow: 0 0 50px gray;
-  width: 400px;
+  width: 40%;
 }
 
 .login-container h2 {
@@ -25,46 +34,73 @@ body {
 }
 
 .login-container input[type="text"],
+.login-container input[type="number"],
+.login-container input[type="email"],
+.login-container input[type="date"],
 .login-container input[type="password"] {
-  width: 400px;
+  width: 100%;
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #ccc;
   border-radius: 3px;
 }
+.login-container input[type="radio"]{
+
+}
+.login-container input[type="date"]{
+  width: 100%;
+  margin-top: 15px;
+}
+
+.date{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+table{
+  width: 100%;
+}
 
 .login-container input[type="submit"] {
-  width: 423px;
-  padding: 10px;
+  width: 100%;
+  font-size: 20px;
   background-color: #000000;
-  color: #fff;
+  color: white;
   border: none;
-  border-radius: 3px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
   cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .login-container input[type="submit"]:hover {
-  background-color: #616262;
+  color: rgb(255, 255, 255);
+  background-color: #303030;
 }
 
 .Create {
   color: rgba(67, 64, 64, 0.639);
   font-size: small;
-  margin-left: 160px;
-  position: relative;
-  top: 10px;
   text-decoration: none;
+}
 
+.slink {
+  text-align: center;
 }
 
 .Create:hover {
   color: rgb(67, 64, 64);
 }
 
-hr {
-  width: 450px;
-  position: relative;
-  top: 5px;
-  right: 10px;
-  background-color: rgba(128, 128, 128, 0.457);
+.logout-button{
+  display: none;
+}
+
+.error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
 }
