--- a/public/styles/view.css
+++ b/public/styles/view.css
@@ -1,31 +1,48 @@
+body{
+  background-color: #f4f4f4;
+}
+
+.containers {
+  width: 60%;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
 }
-th, td {
+th,
+td {
   padding: 8px;
   text-align: left;
   border-bottom: 1px solid #ddd;
 }
+td a{
+  text-decoration: none;
+  color: black;
+}
 th {
   background-color: #f2f2f2;
-}
-tr:hover {
-  background-color: #f5f5f5;
 }
 .button-container {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
 }
+.button a,
 .button {
-  padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+  width: 100px;
+  margin: 0px 20px;
 }
 .hire {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
 }
 .reject {
@@ -33,6 +50,46 @@ tr:hover {
   color: white;
 }
 .profile {
-  background-color: #008CBA;
+  background-color: #008cba;
   color: white;
+  text-decoration: none;
 }
+
+.backBtn {
+  font-size: 30px;
+  margin: 10px 20px;
+  color: black;
+}
+
+ .head{
+  font-weight: 600;
+  text-align: center;
+  color: #000000;
+  font-size: 25pt;
+  padding-left: 33px;
+  margin: 7px 5px 8px 8px;
+}
+
+.action{
+  width: 300px;
+}
+
+.button-container{
+  justify-content: end;
+}
+
+
+.name{
+  width: 30%;
+}
+
+.email{
+  width: 30%;
+}
+
+.date{
+  width: 20%;
+}
+
+
+
