--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -15,7 +15,7 @@
   </div>
   <div class="navbar-logout">
     <% if(status) {%>
-    <a href="/profile" class="logout-button">Profile</a>
+    <a href="/profile/<%= id %>" class="logout-button">Profile</a>
     <a href="/auth/logout" class="logout-button">Logout</a>
     <%} else {%>
     <a href="/auth/login" class="logout-button">Login</a>
