--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -2,7 +2,7 @@
 
 <div class="navbar">
   <div class="navbar-brand">
-    <img src="/logo.png" alt="Logo" />
+    <img src="/img/logo.png" alt="Logo" />
     <span>Haansh</span>
   </div>
   <div class="navbar-links" id="navbarLinks">
