--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <%- include('links') %>
-  <link rel="stylesheet" href="/styles/about.css" />
-  <title>About us</title>
-</head>
-<body>
-  <%- include('navbar') %>
-  <div class="containers">
-    <h1>About Haansh</h1>
-    <p>Welcome to Haansh, your go-to platform for finding and posting jobs. We believe in connecting talented individuals with the right opportunities and helping businesses grow through our platform.</p>
-    <p>At Haansh, we are constantly expanding our team. We are looking for passionate individuals who are eager to make a difference. If you're ready to join a dynamic and innovative team, we want to hear from you!</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <%- include('links') %>
+    <link rel="stylesheet" href="/styles/about.css" />
+    <title>About us</title>
+  </head>
+  <body>
+    <%- include('navbar') %>
+    <div class="containers">
+      <h1>About Haansh</h1>
+      <p>
+        Welcome to Haansh, your go-to platform for finding and posting jobs. We
+        believe in connecting talented individuals with the right opportunities
+        and helping businesses grow through our platform.
+      </p>
+      <p>
+        At Haansh, we are constantly expanding our team. We are looking for
+        passionate individuals who are eager to make a difference. If you're
+        ready to join a dynamic and innovative team, we want to hear from you!
+      </p>
 
-    <div class="work-platform">
+      <div class="work-platform">
         <h2>Our Work Platform</h2>
-        <p>Haansh offers a user-friendly and efficient platform for both job seekers and employers. Here are some key features:</p>
+        <p>
+          Haansh offers a user-friendly and efficient platform for both job
+          seekers and employers. Here are some key features:
+        </p>
         <ul>
-            <li>Search and apply for jobs easily</li>
-            <li>Post job listings quickly and efficiently</li>
-            <li>Connect with top talent in various industries</li>
-            <li>Streamlined application process</li>
-            <li>Personalized job recommendations</li>
+          <li>Search and apply for jobs easily</li>
+          <li>Post job listings quickly and efficiently</li>
+          <li>Connect with top talent in various industries</li>
+          <li>Streamlined application process</li>
+          <li>Personalized job recommendations</li>
         </ul>
+      </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
