--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -7,18 +7,17 @@
   align-items: center;
   min-height: 90vh;
 }
-.background{
+
+.background {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('../img/login.jpg') no-repeat center center fixed;
+  background: url("../img/login.jpg") no-repeat center center fixed;
   background-size: cover;
-  z-index: -1; /* Put it behind other elements */
+  z-index: -1;
 }
-
-
 
 .login-container {
   background: rgba(0, 0, 0, 0.1);
@@ -44,22 +43,20 @@
   border: 1px solid #ccc;
   border-radius: 3px;
 }
-.login-container input[type="radio"]{
 
-}
-.login-container input[type="date"]{
+.login-container input[type="date"] {
   width: 100%;
   margin-top: 15px;
 }
 
-.date{
+.date {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-table{
+table {
   width: 100%;
 }
 
@@ -95,7 +92,7 @@ table{
   color: rgb(67, 64, 64);
 }
 
-.logout-button{
+.logout-button {
   display: none;
 }
 
