--- a/views/hire.ejs
+++ b/views/hire.ejs
@@ -192,7 +192,6 @@
         errorMessage.innerHTML = "";
         let errors = [];
 
-        // Validate mobile number
         const mobileRegex = /^\d{10}$/;
         if (!mobileRegex.test(mobileInput.value)) {
           errors.push({
@@ -202,7 +201,7 @@
         }
 
         if (errors.length > 0) {
-          event.preventDefault(); // Prevent form submission
+          event.preventDefault();
           errors.forEach(({ input, message }) => {
             const errorElement = document.createElement("div");
             errorElement.classList.add("error-message");
