--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -244,7 +244,6 @@
         errorMessage.innerHTML = "";
         let errors = [];
 
-        // Validate name
         const nameRegex = /^[a-zA-Z\s]+$/;
         if (!nameRegex.test(form.name.value)) {
           errors.push({
@@ -253,7 +252,6 @@
           });
         }
 
-        // Validate mobile number
         const mobileRegex = /^\d{10}$/;
         if (!mobileRegex.test(mobileInput.value)) {
           errors.push({
@@ -262,7 +260,6 @@
           });
         }
 
-        // Validate birthdate
         const dob = new Date(dobInput.value);
         const currentDate = new Date();
         if (dob >= currentDate) {
@@ -273,12 +270,11 @@
         }
 
         if (errors.length > 0) {
-          event.preventDefault(); // Prevent form submission
+          event.preventDefault();
           errors.forEach(({ input, message }) => {
             const errorElement = document.createElement("div");
             errorElement.classList.add("error-message");
             errorElement.textContent = message;
-            // input.parentNode.insertBefore(errorElement, input);
             input.insertAdjacentElement("afterend", errorElement);
           });
         }
