--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -113,7 +113,6 @@
           });
         }
 
-        // Validate username
         const usernameRegex = /^[a-zA-Z0-9]+$/;
         if (!usernameRegex.test(usernameInput.value)) {
           errors.push({
@@ -122,7 +121,6 @@
           });
         }
 
-        // Validate mobile number
         const mobileRegex = /^\d{10}$/;
         if (!mobileRegex.test(mobileInput.value)) {
           errors.push({
@@ -131,7 +129,6 @@
           });
         }
 
-        // Validate password
         if (passwordInput.value.length < 8) {
           errors.push({
             input: passwordInput,
@@ -139,7 +136,6 @@
           });
         }
 
-        // Validate birthdate
         const dob = new Date(dobInput.value);
         const currentDate = new Date();
         if (dob >= currentDate) {
@@ -150,7 +146,7 @@
         }
 
         if (errors.length > 0) {
-          event.preventDefault(); // Prevent form submission
+          event.preventDefault();
           errors.forEach(({ input, message }) => {
             const errorElement = document.createElement("div");
             errorElement.classList.add("error-message");
