--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,8 @@
         <h1>Welcome to our Haansh platform</h1>
         <p>
           Find taleented freelancers or showcase your skills to clients
-          worldwide. <span><a href="/auth/signup">Join us</a></span>
+          worldwide. <% if(!status) {%>
+          <span><a href="/auth/signup">Join us</a></span> <% } %>
         </p>
       </div>
       <div class="img">
